# simulate_everything

./: .gitignore  CLAUDE.md  CONTRIBUTORS.md  Cargo.toml  README.md  generals-web.service  simulate_everything.service.example
crates/cli/: Cargo.toml
crates/cli/src/: headless_renderer.rs  main.rs  v2bench.rs  v3_behavior_bench.rs  v3bench.rs
crates/engine/: Cargo.toml
crates/engine/src/: action.rs  agent.rs  ascii.rs  event.rs  expander_agent.rs  game.rs  lib.rs  mapgen.rs  pressure_agent.rs  replay.rs  scoreboard.rs  state.rs  subprocess_agent.rs  swarm_agent.rs
crates/engine/src/v2/: agent.rs  agent_layers.rs  ascii.rs  city_ai.rs  combat.rs  directive.rs  gamelog.rs  hex.rs  integration_tests.rs  mapgen.rs  mod.rs  observation.rs  operations.rs  pathfinding.rs  replay.rs  runner.rs  sim.rs  spatial.rs  spectator.rs  state.rs  vision.rs
crates/engine/src/v3/: action_queue.rs  affordance.rs  agent.rs  armor.rs  behavior_snapshot.rs  body.rs  body_model.rs  body_physics.rs  coarse_index.rs  collision.rs  combat_log.rs  commands.rs  damage.rs  damage_table.rs  derived.rs  economy.rs  equipment.rs  fine_index.rs  formation.rs  hex.rs  hex_mapping.rs  hitbox.rs  htn.rs  index.rs  kinetic_chain.rs  lifecycle.rs  mapgen.rs  martial.rs  mod.rs  movement.rs  needs.rs  operations.rs  pathfinding.rs  perception.rs  physical.rs  projectile.rs  query.rs  resolution.rs  sim.rs  social.rs  (+10 more)
crates/protocol/: Cargo.toml
crates/protocol/src/: entity.rs  init.rs  lib.rs  msgpack.rs  terrain.rs  tick.rs
crates/replay/: Cargo.toml
crates/replay/src/: main.rs  viewer.css  viewer.js
crates/viewer/: Cargo.toml  Trunk.toml  index.html
crates/viewer/src/: body_model.rs  camera.rs  entities.rs  gpu.rs  heightmap.rs  hex_overlay.rs  input.rs  lib.rs  overlay.rs
crates/viewer/src/shaders/: body.wgsl  body_interpolate.wgsl  entity.wgsl  hex_overlay.wgsl  interpolate.wgsl  terrain.wgsl
crates/web/: Cargo.toml
crates/web/src/: lib.rs  lobby.rs  main.rs  protocol.rs  roundrobin.rs  v2_protocol.rs  v2_roundrobin.rs  v2_rr_review.rs  v3_drill.rs  v3_protocol.rs  v3_review.rs  v3_roundrobin.rs
crates/web/templates/: index.html  live.html  rr.html  scoreboard.html  v2rr.html  v2sim.html  v3drill.html  v3replay.html  v3reviews.html  v3rr.html
docker/: replay.Dockerfile
docs/: architecture.md  handoff-frontend-design-apr13.md  handoff-ui-debug-apr13.md  handoff-v2-adjacency-standoff-apr13.md  handoff-v3-terrain-verification-apr14.md  pressure-agent-handoff.md  roadmap.md  v2-agent-spec.md  v2-engine-spec.md  v2-future-layers.md  v2-unit-behavior.md  v3-capability-matrix.md  v3-engine-audit-2026-04-14.md  v3-personality-report.md
docs/plans/: a1-entity-model.md  agent-intelligence-pipeline.md  c1-pixijs-scaffold.md  frontend-rendering-overhaul.md  future-neural-evolution.md  v2-integration-tests.md  v2-remaining-systems.md  v2-rr-live-status-hover-followup.md  v2-scaling-architecture.md  v3-A-agents.md  v3-E-entity.md  v3-R1-impl.md  v3-R2-impl.md  v3-R3-impl.md  v3-S-spatial.md  v3-W1-data-structs.md  v3-W2-melee-resolution.md  v3-W3-projectile-system.md  v3-arena-mutual-combat.md  v3-execution-plan.md  v3-integration-gaps.md  v3-phase0-protocol-crate.md  v3-post-impl-tracks.md  v3-sequencing.md  v3-streamA-verlet-body.md  v3-streamB-wgpu-viewer.md  v3-streamC-spatial-index.md  v3-streamD-terrain-ops.md  v3-streamE-agent-behavior.md  v3-streamF-compositional-world.md  v3-track1-replay-capture.md  v3-track2-larger-arena.md  v3-track3-economy-wiring.md  v3-track4-personality-diff.md  v3-track5-inspector-tooltip.md  v3-verlet-body-model.md  v3-wgpu-renderer.md
docs/plans/archive/: a2-sim-tick-economy.md  a3-combat-resolution.md  b2-operations-layer.md  c2-entity-rendering.md  d2-rr-loop-adaptation.md  svg-quick-fixes.md  v2-rr-review-followup.md  v3-D-damage.md  v3-D1-body-wound-vitals.md  v3-E1-entity-impl.md  v3-E2-simtick-impl.md  v3-M-movement.md  v3-P-protocol.md  v3-R-renderer.md  v3-W-weapons.md  v3-execution-plan.md
docs/research/: agent-intelligence-systems.md  game-ui-design.md  hexboard-rendering-analysis.md  historical-battles.md
docs/specs/: v3-A-agents.md  v3-D-damage.md  v3-M-movement.md  v3-P-protocol.md  v3-R-renderer.md  v3-S-spatial.md  v3-W-weapons.md  v3-entity-unification-2026-04-13.md  v3-review-gallery.md
examples/: agent.py  v3-arena-10v10-mixed.toml  v3-arena-5v5-mixed.toml
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  Board.tsx  HexBoard.tsx  HexCanvas.tsx  LiveApp.tsx  Nav.tsx  ScoreboardApp.tsx  V2App.tsx  V2SimApp.tsx  V3App.tsx  V3DrillApp.tsx  V3ReplayApp.tsx  index.tsx  reviews.tsx  types.ts  v2types.ts  v3types.ts
frontend/src/reviews/: BundleCard.tsx  ReviewGallery.tsx
frontend/src/styles/: app.css.ts  board.css.ts  reviews.css.ts  theme.css.ts  v3.css.ts
frontend/src/v3/: HexCanvas.tsx  Inspector.tsx  LayerToggles.tsx  PlaybackControls.tsx  ScoreBar.tsx  ViewerCanvas.tsx  applySnapshotDelta.ts  colors.ts  entityMap.ts
frontend/src/v3/render/: camera.ts  corpses.ts  entities.ts  grid.ts  projectiles.ts
python-client/: agent.py  main.py  observation.py  stdio_agent.py
scripts/: build-review-bundle.sh  check-sensitive.sh  review-scenario.sh  run-v3-viewer-dev-backend.sh
