[workspace]
resolver = "2"
members = ["crates/engine", "crates/cli", "crates/web"]

[workspace.package]
edition = "2024"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
askama = "0.13"
tower-http = { version = "0.6", features = ["fs", "cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
