[workspace]
resolver = "2"
members = ["crates/engine", "crates/cli", "crates/web", "crates/replay"]

[workspace.package]
edition = "2024"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
rayon = "1.10"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
askama = "0.13"
tower-http = { version = "0.6", features = ["fs", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
