[package]
name = "simulate-everything-cli"
version = "0.1.0"
edition.workspace = true

[[bin]]
name = "simulate_everything_cli"
path = "src/main.rs"

[[bin]]
name = "v2_scaling_bench"
path = "src/bin/v2_scaling_bench.rs"

[dependencies]
simulate-everything-engine = { path = "../engine" }
simulate-everything-protocol = { path = "../protocol" }
simulate-everything-web = { path = "../web" }
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
rand.workspace = true
rayon.workspace = true
smallvec = "1"
ctrlc = "3.4"
tiny-skia = "0.11"
font8x8 = "0.3"
