[package]
name = "simulate-everything-engine"
version = "0.1.0"
edition.workspace = true

[dependencies]
simulate-everything-protocol = { path = "../protocol" }
serde.workspace = true
serde_json.workspace = true
rand.workspace = true
tracing.workspace = true
noise = "0.9"
slotmap = { version = "1", features = ["serde"] }
smallvec = { version = "1", features = ["serde"] }
bitvec = "1"
moka = { version = "0.12", features = ["sync"] }
