[package]
name = "simulate_everything_replay"
version = "0.1.0"
edition.workspace = true

[[bin]]
name = "simulate_everything_replay"
path = "src/main.rs"

[dependencies]
simulate-everything-engine = { path = "../engine" }
serde.workspace = true
serde_json.workspace = true
rand.workspace = true
rayon.workspace = true
axum = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true }

[features]
default = ["serve"]
serve = ["dep:axum", "dep:tokio", "dep:tower-http"]
