[package]
name = "simulate-everything-viewer"
version = "0.1.0"
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
simulate-everything-protocol = { path = "../protocol" }
wgpu = "29"
winit = { version = "0.30", features = ["rwh_06"] }
glam = "0.30"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "Location",
    "Url",
    "UrlSearchParams",
    "WebSocket",
    "MessageEvent",
    "BinaryType",
    "Blob",
    "ErrorEvent",
    "console",
    "Performance",
    "Event",
    "KeyboardEvent",
    "MouseEvent",
    "WheelEvent",
    "Node",
] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
rmp-serde = "1"
log = "0.4"
wasm-logger = "0.2"
console_error_panic_hook = "0.1"
bytemuck = { version = "1", features = ["derive"] }
