[package]
name = "simulate-everything-web"
version = "0.1.0"
edition.workspace = true

[[bin]]
name = "simulate_everything"
path = "src/main.rs"

[dependencies]
simulate-everything-engine = { path = "../engine" }
serde.workspace = true
serde_json.workspace = true
rand.workspace = true
tokio.workspace = true
axum.workspace = true
askama.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
