[package]
name = "simulate-everything-web"
version = "0.1.0"
edition.workspace = true

[[bin]]
name = "simulate_everything"
path = "src/main.rs"

[dependencies]
simulate-everything-engine = { path = "../engine" }
simulate-everything-protocol = { path = "../protocol" }
serde.workspace = true
serde_json.workspace = true
rmp-serde = "1"
rand.workspace = true
tokio.workspace = true
axum.workspace = true
askama.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
